--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,5 +2,8 @@ Django==5.0.1
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 channels==4.0.0
+channels-redis==4.1.0
 openai==1.3.0
 python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+gunicorn==21.2.0
