--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,5 +5,5 @@ channels==4.0.0
 channels-redis==4.1.0
 openai==1.3.0
 python-dotenv==1.0.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.18
 gunicorn==21.2.0
